--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -6,7 +6,7 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql
+  adapter: mysql2
   encoding: utf8
   reconnect: true
   database: ci_development
