--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -6,37 +6,30 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   reconnect: true
   database: ci_development
   pool: 5
-  username: root
-  password: 
-  socket: /tmp/mysql.sock
+  username: dev
+  password: password
+#  socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: mysql
-  encoding: utf8
+  adapter: mysql2
   reconnect: false
   database: ci_test
-  pool: 5
-  username: root
-  password: 
-  socket: /tmp/mysql.sock
+  password: lucas
 
-production:
+production: &test
   adapter: mysql2
-  encoding: utf8
   reconnect: true
   database: ci_production
-  pool: 5
-  username: root
-  password: 
-  socket: /tmp/mysql.sock
+  password: lucas
 
 cucumber:
   <<: *test
+
